...

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <org.oppia.android.app.customview.LessonThumbnailImageView
        android:id="@+id/completed_story_lesson_thumbnail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@{viewModel.completedStoryName}"
        android:importantForAccessibility="no"
        android:scaleType="centerInside"
        app:entityId="@{viewModel.completedStory.storyId}"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/completed_story_lesson_thumbnail">

        <TextView
          android:id="@+id/completed_story_name_text_view"
          style="@style/TextViewStart"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="8dp"
          android:layout_marginEnd="8dp"
...
          android:textSize="14sp"
          android:textStyle="bold"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

        <TextView
          android:id="@+id/completed_story_topic_name_text_view"
          style="@style/TextViewStart"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="8dp"
          android:layout_marginTop="4dp"
          android:layout_marginEnd="8dp"
...
