...
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/completed_story_list_app_bar_layout">

      <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/completed_story_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingStart="@dimen/completed_story_list_fragment_recyclerview_padding_start"
        android:paddingTop="@dimen/completed_story_list_fragment_recyclerview_padding_top"
...
